# rig-cli

./: Cargo.toml  EXPLAIN.md  README.md  deny.toml  justfile  rust-toolchain.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/resolved/: mcp-server-not-spawned-by-claude-cli.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-resource-management-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  VERIFICATION.md
.planning/phases/02-retry-validation-loop/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/02.1-transparent-mcp-tool-agent/: 02.1-01-PLAN.md  02.1-02-PLAN.md  02.1-03-PLAN.md  02.1-RESEARCH.md  VERIFICATION.md
.planning/phases/03-payload-instruction-system/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-agent-containment/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-observability-infrastructure/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-platform-hardening/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-rig-integration-polish/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-06-PLAN.md  07-06-SUMMARY.md  07-07-PLAN.md  07-07-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-claude-code-adapter/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-codex-adapter/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-opencode-adapter/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-CONTEXT.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-documentation-examples/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-05-PLAN.md  11-05-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/quick/001-fix-e2e-tests-real-mcp-tools/: 001-PLAN.md
.planning/quick/002-save-phase-2-1-plans-to-gsd/: 002-PLAN.md  002-SUMMARY.md
.planning/quick/003-update-planning-docs-for-e2e-testing-f/: 003-PLAN.md  003-SUMMARY.md
.planning/quick/004-document-e2e-testing-findings-and-adapte/: 004-PLAN.md  004-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
claudecode-adapter/: Cargo.toml
claudecode-adapter/src/: cmd.rs  discovery.rs  error.rs  init.rs  lib.rs  process.rs  types.rs
claudecode-adapter/tests/: e2e_containment.rs
codex-adapter/: Cargo.toml
codex-adapter/src/: cmd.rs  discovery.rs  error.rs  lib.rs  process.rs  types.rs
codex-adapter/tests/: e2e_containment.rs
mcp/: Cargo.toml  README.md
mcp/src/: lib.rs  server.rs  tools.rs
mcp/src/extraction/: config.rs  error.rs  feedback.rs  metrics.rs  mod.rs  orchestrator.rs
mcp/tests/: integration.rs
opencode-adapter/: Cargo.toml
opencode-adapter/src/: cmd.rs  discovery.rs  error.rs  lib.rs  process.rs  types.rs
opencode-adapter/tests/: e2e_containment.rs
rig-cli/: Cargo.toml
rig-cli/examples/: agent_extra_tools.rs  agent_mcp.rs  chat_mcp.rs  error_handling.rs  extraction.rs  mcp_deterministic.rs  multiagent.rs  one_shot_mcp.rs  payload_chat.rs
rig-cli/src/: claude.rs  codex.rs  config.rs  discovery.rs  errors.rs  lib.rs  opencode.rs  prelude.rs  response.rs
rig-provider/: Cargo.toml
rig-provider/examples/: agent_workflow.rs  claudecode_mcp.rs  data_extraction.rs  extraction_e2e.rs  extraction_retry_e2e.rs  extraction_summarize_e2e.rs  mcp_extraction_e2e.rs  mcp_tool_agent_e2e.rs  one_shot.rs  opencode_jsonl.rs  payload_extraction_e2e.rs  session_isolation.rs  streaming.rs  tool_calling.rs
rig-provider/src/: errors.rs  lib.rs  main.rs  mcp_agent.rs  sessions.rs  setup.rs  utils.rs
rig-provider/src/adapters/: claude.rs  codex.rs  mod.rs  opencode.rs
