[workspace]
resolver = "2"
members = [
    "rig-provider",
    "mcp",
    "claudecode-adapter",
    "codex-adapter",
    "opencode-adapter",
]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
perf     = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Common upgrades:
unwrap_used   = "warn"
expect_used   = "warn"
panic         = "warn"
todo          = "warn"
unimplemented = "warn"
dbg_macro     = "warn"

# Allowed nits:
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# Transitive dependency version conflicts (not our code)
multiple_crate_versions = "allow"
