[package]
name = "claudecode-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Claude"]
description = "A Rust library providing programmatic interface to Claude Code CLI tool"
license = "MIT"

[lints]
workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
which = "6.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
nix = { version = "0.29", features = ["signal"] }
