[package]
name = "rig-cli-claude"
version = "0.1.0"
edition = "2021"
authors = ["Claude"]
description = "Rust adapter for Claude Code CLI subprocess execution"
license = "MIT"
repository = "https://github.com/pnod/rig-cli"
readme = "../README.md"
keywords = ["claude", "cli", "adapter", "subprocess"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
which = "6.0"
dirs = "5.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
