[package]
name = "codex-adapter"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
which = "6.0"
nix = { version = "0.29", features = ["signal"] }
