[package]
name = "rig-cli-mcp"
version = "0.3.0"
edition = "2024"
description = "MCP server integration for Rig CLI providers"
license = "MIT"
repository = "https://github.com/pnod/rig-cli"
readme = "../README.md"
keywords = ["mcp", "rig", "server", "tools"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
rmcp = { version = "0.14.0", features = ["server", "transport-io", "macros"] }
rig = { package = "rig-core", version = "0.29.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
jsonschema = "0.26"
futures = "0.3"
thiserror = "1.0"
schemars = "1.0"
