[package]
name = "rig-cli-opencode"
version = "0.2.0"
edition = "2021"
description = "Rust adapter for OpenCode CLI subprocess execution"
license = "MIT"
repository = "https://github.com/pnod/rig-cli"
readme = "../README.md"
keywords = ["opencode", "cli", "adapter", "subprocess"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
which = "6.0"
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
