[package]
name = "rig-cli"
version = "0.1.0"
edition = "2021"
description = "Turn CLI-based AI agents into idiomatic Rig 0.29 providers"
license = "MIT"
repository = "https://github.com/pnod/rig-cli"
keywords = ["rig", "cli", "provider", "llm", "structured-extraction"]
categories = ["development-tools"]

[features]
default = ["claude", "codex", "opencode"]
claude = []
codex = []
opencode = []

[dependencies]
rig-provider = { path = "../rig-provider" }
rig = { package = "rig-core", version = "0.29.0" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[lints]
workspace = true
