[package]
name = "rig-cli"
version = "0.1.0"
edition = "2021"
description = "Turn CLI-based AI agents into idiomatic Rig 0.29 providers"
license = "MIT"
repository = "https://github.com/pnod/rig-cli"
readme = "../README.md"
keywords = ["rig", "cli", "provider", "llm", "structured-extraction"]
categories = ["development-tools"]

[features]
default = ["claude", "codex", "opencode"]
claude = []
codex = []
opencode = []
debug-output = []

[dependencies]
rig-provider = { path = "../rig-provider" }
rig-mcp-server = { path = "../mcp" }
claudecode-adapter = { path = "../claudecode-adapter" }
codex-adapter = { path = "../codex-adapter" }
opencode-adapter = { path = "../opencode-adapter" }
rig = { package = "rig-core", version = "0.29.0" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
schemars = "1.2"

[lints]
workspace = true
