[package]
name = "rig-cli"
version = "0.3.2"
edition = "2021"
description = "Turn CLI-based AI agents into idiomatic Rig 0.29 providers"
license = "MIT"
repository = "https://github.com/pnod/rig-cli"
readme = "../README.md"
keywords = ["rig", "cli", "provider", "llm", "structured-extraction"]
categories = ["development-tools"]

[features]
default = ["claude", "codex", "opencode"]
claude = []
codex = []
opencode = []
debug-output = []

[dependencies]
rig-cli-provider = { version = "0.3.2", path = "../rig-provider", registry = "kellnr" }
rig-cli-mcp = { version = "0.3.2", path = "../mcp", registry = "kellnr" }
rig-cli-claude = { version = "0.3.2", path = "../claudecode-adapter", registry = "kellnr" }
rig-cli-codex = { version = "0.3.2", path = "../codex-adapter", registry = "kellnr" }
rig-cli-opencode = { version = "0.3.2", path = "../opencode-adapter", registry = "kellnr" }
rig = { package = "rig-core", version = "0.29.0" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
schemars = "1.2"
chrono = "0.4"

[lints]
workspace = true
