[package]
name = "rig-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-mcp-server = { path = "../mcp" }
rig = { package = "rig-core", version = "0.29.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"
claudecode-adapter = { path = "../claudecode-adapter" }
codex-adapter = { path = "../codex-adapter" }
opencode-adapter = { path = "../opencode-adapter" }
tokio-stream = "0.1.18"
futures = "0.3.31"
uuid = { version = "1.20.0", features = ["v4"] }

[lints]
workspace = true

[[bin]]
name = "rig-provider"
path = "src/main.rs"
