[package]
name = "rig-cli-provider"
version = "0.1.0"
edition = "2021"
description = "Rig provider turning CLI agents into idiomatic Rig CompletionModel and Tool implementations"
license = "MIT"
repository = "https://github.com/pnod/rig-cli"
readme = "../README.md"
keywords = ["rig", "cli", "provider", "llm"]
categories = ["development-tools"]

[dependencies]
rig-cli-mcp = { path = "../mcp" }
rig = { package = "rig-core", version = "0.29.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"
semver = "1.0"
rig-cli-claude = { path = "../claudecode-adapter" }
rig-cli-codex = { path = "../codex-adapter" }
rig-cli-opencode = { path = "../opencode-adapter" }
tokio-stream = "0.1.18"
futures = "0.3.31"
uuid = { version = "1.20.0", features = ["v4"] }
dirs = "5.0"

[lints]
workspace = true

[[bin]]
name = "rig-cli-provider"
path = "src/main.rs"
